@@ -1,6 +1,12 @@
 package com.backend.nova.auth.jwt;
 
+import com.backend.nova.admin.entity.Admin;
+import com.backend.nova.admin.repository.AdminRepository;
+import com.backend.nova.auth.admin.AdminDetails;
+import com.backend.nova.auth.member.MemberDetails;
 import com.backend.nova.member.dto.TokenResponse;
+import com.backend.nova.member.entity.Member;
+import com.backend.nova.member.repository.MemberRepository;
 import io.jsonwebtoken.*;
 import io.jsonwebtoken.io.Decoders;
 import io.jsonwebtoken.security.Keys;
@@ -10,8 +16,6 @@ import org.springframework.security.authentication.UsernamePasswordAuthenticatio
 import org.springframework.security.core.Authentication;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
-import org.springframework.security.core.userdetails.User;
-import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.stereotype.Component;
 
 import javax.crypto.SecretKey;
@@ -28,16 +32,25 @@ public class JwtProvider {
     private final Long accessTokenExpires;
     private final Long refreshTokenExpires;
 
-    public JwtProvider(@Value("${jwt.secret}") String secretStr) {
-        byte[] keyBytes = Decoders.BASE64.decode(secretStr); //secretStr을 BASE64로 Decode
+    private final AdminRepository adminRepository;
+    private final MemberRepository memberRepository;
+
+    public JwtProvider(
+            @Value("${jwt.secret}") String secretStr,
+            AdminRepository adminRepository,
+            MemberRepository memberRepository
+    ) {
+        byte[] keyBytes = Decoders.BASE64.decode(secretStr); // secretStr을 BASE64로 Decode
         this.secretKey = Keys.hmacShaKeyFor(keyBytes);
-        accessTokenExpires = 3600 * 1000L; // 1시간
-        refreshTokenExpires = 604800 * 1000L; // 7일
+        this.accessTokenExpires = 3600 * 1000L;    // 1시간
+        this.refreshTokenExpires = 604800 * 1000L; // 7일
+        this.adminRepository = adminRepository;
+        this.memberRepository = memberRepository;
     }
 
     // 로그인 성공 시 new 토큰 생성 (Access + Refresh)
     public TokenResponse generateToken(Authentication authentication) {
-        // 1. 권한 가져오기: 로그인한 사용자의 권한 리스트를 스트림으로 순회하며 ","로 구분된 문자열로 만듦
+        // 1. 권한 가져오기: 로그인한 사용자의 권한 리스트를 ","로 구분된 문자열로 만듦
         String authorities = authentication.getAuthorities().stream()
                 .map(GrantedAuthority::getAuthority)
                 .collect(Collectors.joining(","));
@@ -47,10 +60,10 @@ public class JwtProvider {
         Date refreshTokenExpiresIn = new Date(now + refreshTokenExpires);
 
         String accessToken = Jwts.builder()
-                .subject(authentication.getName()) //사용자ID
-                .claim("auth", authorities) //권한정보(claim)
+                .subject(authentication.getName()) // adminId or memberId
+                .claim("auth", authorities)         // 권한 정보
                 .expiration(accessTokenExpiresIn)
-                .signWith(secretKey) // 비밀키 서명
+                .signWith(secretKey)                // 비밀키 서명
                 .compact();
 
         String refreshToken = Jwts.builder()
@@ -72,24 +85,48 @@ public class JwtProvider {
         if (claims.get("auth") == null) {
             throw new RuntimeException("권한 정보가 없는 토큰입니다.");
         }
-        // 1. Claims 에서 권한 정보 가져오기
+
+        // Claims 에서 권한 정보 가져오기
         Collection<? extends GrantedAuthority> authorities =
                 Arrays.stream(claims.get("auth").toString().split(","))
                         .map(SimpleGrantedAuthority::new)
-                        .collect(Collectors.toList());
-        // "ROLE_USER,ROLE_ADMIN" 문자열 split -> GrantedAuthority 객체 리스트 변환
+                        .toList();
+        // "ROLE_MEMBER", "ROLE_ADMIN", "ROLE_SUPER_ADMIN" 등
 
-        // User: UserDetails 구현체
-        // 사전에 검증된 토큰이므로 비밀번호는 빈 문자열("")로 둔다.
-        UserDetails principal = new User(claims.getSubject(), "", authorities);
-        return new UsernamePasswordAuthenticationToken(principal, "", authorities);
+        String subject = claims.getSubject(); // adminId or memberId
+
+        // ================= ADMIN =================
+        if (authorities.stream().anyMatch(a -> a.getAuthority().startsWith("ROLE_ADMIN"))) {
+            Long adminId = Long.parseLong(subject);
+            Admin admin = adminRepository.findById(adminId)
+                    .orElseThrow(() -> new RuntimeException("Admin not found"));
+
+            AdminDetails principal = new AdminDetails(admin);
+
+            return new UsernamePasswordAuthenticationToken(
+                    principal, "", authorities
+            );
+        }
+
+        // ================= MEMBER =================
+        Long memberId = Long.parseLong(subject);
+        Member member = memberRepository.findById(memberId)
+                .orElseThrow(() -> new RuntimeException("Member not found"));
+
+        MemberDetails principal = new MemberDetails(member);
+
+        return new UsernamePasswordAuthenticationToken(
+                principal, "", authorities
+        );
     }
 
     // 토큰 유효성 검사 (요청 시 Filter에서 가장 먼저 실행)
     public boolean validateToken(String token) {
         try {
-            // secretKey 기반으로 입력된 token 파싱
-            Jwts.parser().verifyWith(secretKey).build().parseSignedClaims(token);
+            Jwts.parser()
+                    .verifyWith(secretKey)
+                    .build()
+                    .parseSignedClaims(token);
             return true;
         } catch (io.jsonwebtoken.security.SecurityException | MalformedJwtException e) {
             log.info("잘못된 JWT 서명입니다.");
@@ -102,11 +139,17 @@ public class JwtProvider {
         }
         return false;
     }
+
     // accessToken Payload(Claims)를 반환하는 메서드
     private Claims parseClaims(String accessToken) {
         try {
-            return Jwts.parser().verifyWith(secretKey).build().parseSignedClaims(accessToken).getPayload();
+            return Jwts.parser()
+                    .verifyWith(secretKey)
+                    .build()
+                    .parseSignedClaims(accessToken)
+                    .getPayload();
         } catch (ExpiredJwtException e) {
+            // 만료된 토큰이어도 Claims 는 반환
             return e.getClaims();
         }
     }
